--- a/src/components/assets/styles/App.scss
+++ b/src/components/assets/styles/App.scss
@@ -1148,76 +1148,19 @@ label {
     box-shadow: none !important;
     border-radius: 0px;
     min-width: calc(50vw - 20px) !important;
-    height: 70vh;
+    height: 500px;
     position: absolute;
     right: 0px;
     bottom: 50px;
-    overflow-y: auto;
-    padding: 20px;
-  }
-  .chat-textfield{
-    position: absolute;
-    bottom: 20px;
-    width: calc(100% - 40px);    
-    .send-btn{
-      background: $pink;
-      border-radius: 4px;
-      svg{
-        color: $white;
-      }
-    } 
-    .MuiOutlinedInput-root{
-      padding-right: 10px;
-    }   
-  }
-
-
-
-  .chatbot {
-    width: '300px';
-    background-color: '#f0f0f0';
-    border: '1px solid #ccc';
-    border-radius: '5px';
-    margin: '0 auto';
-    padding: '10px';
-  }
+    overflow-y: hidden;    
+    background-color: transparent;
+  }    
   .chatbox {
-    display: 'flex';
-    flex-direction: 'column';
+    display: flex;
+    flex-direction: column;
   }
   .messages {
-    max-height: '300px';
-    overflow-y: 'scroll';
-  }
-  .message {
-    margin-bottom: '10px';
-  }
-  .botMessage {
-    background-color: '#007bff';
-    color: 'white';
-    padding: '5px 10px';
-    border-radius: '5px';
-    margin-left: 'auto';
-  }
-  .userMessage {
-    background-color: '#e0e0e0';
-    padding: '5px 10px';
-    border-radius: '5px';
-    margin-right: 'auto';
-  }
-  .chatbot input {
-    width: '100%';
-    padding: '5px';
-    border: '1px solid #ccc';
-    border-radius: '5px';
-    margin-bottom: '10px';
-  }
- .chatbot button {
-    background-color: '#007bff';
-    color: 'white';
-    border: 'none';
-    padding: '10px 20px';
-    border-radius: '5px';
-    cursor: 'pointer';
-  }
+    max-height: 500px;
+    overflow-y: hidden;
+  }   
 }
