--- a/src/components/assets/styles/chatbot.scss
+++ b/src/components/assets/styles/chatbot.scss
@@ -34,32 +34,17 @@ Mixins
   *::before,
   *::after {
     box-sizing: border-box;
-  }
+  } 
   
-  html,
-  body {
-    height: 100%;
-  }
-  
-  body {
-    // background: linear-gradient(135deg, #044f48, #2a7561);
-    background-size: cover;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 12px;
-    line-height: 1.3;
-    overflow: hidden;
-  }
-  
-  .bg {
-    width: 80%;
-    height: 90%;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    //background: url('https://images.unsplash.com/photo-1451186859696-371d9477be93?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925') no-repeat 0 0;
-    filter: blur(80px);
-    transform: scale(1.2);
-  }
+  // .bg {
+  //   width: 80%;
+  //   height: 90%;
+  //   top: 0;
+  //   left: 0;
+  //   z-index: 1;    
+  //   filter: blur(80px);
+  //   transform: scale(1.2);
+  // }
   
   
   /*--------------------
@@ -68,13 +53,13 @@ Mixins
   .chat {
     @include center;
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     max-height: 500px;
     z-index: 2;
-    overflow: hidden;
-    box-shadow: 0 5px 30px rgba(0, 0, 0, .2);
-    background: rgba(0, 0, 0, .5);
-    border-radius: 20px;
+    overflow: auto;
+    //box-shadow: 0 5px 8px rgba(0, 0, 0, .6);
+    background: #fff;
+    border-radius: 0px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -88,7 +73,7 @@ Mixins
     flex: 0 1 45px;
     position: relative;
     z-index: 2;
-    background: rgba(0, 0, 0, 0.2);
+    background: #007A7A;
     color: #fff;
     text-transform: uppercase;
     text-align: left;
@@ -96,15 +81,15 @@ Mixins
     
     h1, h2 {
       font-weight: normal;
-      font-size: 10px;
+      font-size: 11px;
       margin: 0;
       padding: 0;
     }
     
     h2 {
       color: rgba(255, 255, 255, .5);
-      font-size: 8px;
-      letter-spacing: 1px;
+      font-size: 10px;
+      padding-top: 2px;      
     }
     
     .avatar {
@@ -113,13 +98,11 @@ Mixins
       top: 8px;
       left: 9px;
       border-radius: 30px;
-      width: 30px;
-      height: 30px;
+      width: 33px;
+      height: 33px;
       overflow: hidden;
       margin: 0;
-      padding: 0;
-      border: 2px solid rgba(255, 255, 255, 0.24);
-      
+      padding: 0;      
       img {
         width: 100%;
         height: auto;
@@ -133,7 +116,7 @@ Mixins
   --------------------*/
   .messages {
     flex: 1 1 auto;
-    color: rgba(255, 255, 255, .5);
+    color: rgba(255, 255, 255, 1);
     overflow: hidden;
     position: relative;
     width: 100%;
@@ -154,26 +137,26 @@ Mixins
       float: left;
       padding: 6px 10px 7px;
       border-radius: 10px 10px 10px 0;
-      background: rgba(0, 0, 0, .3);
+      background: #EDE7F6;
       margin: 8px 0;
-      font-size: 11px;
+      font-size: 13px;
+      font-weight: 400;
       line-height: 1.4;
       margin-left: 35px;
       position: relative;
-      text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
-      
+      color: #45338C;      
       .timestamp {
         position: absolute;
         bottom: -15px;
         font-size: 9px;
-        color: rgba(255, 255, 255, .3);
+        color: #000;
       }
       
       &::before {
         content: '';
         position: absolute;
         bottom: -6px;
-        border-top: 6px solid rgba(0, 0, 0, .3);
+        border-top: 6px solid #EDE7F6;
         left: 0;
         border-right: 7px solid transparent;
       }
@@ -201,15 +184,16 @@ Mixins
         float: right;
         color: #fff;
         text-align: right;
-        background: linear-gradient(120deg, #248A52, #257287);
+        background: #53B5E0;
         border-radius: 10px 10px 0 10px;
+        font-size: 13px;
         
         &::before {
           left: auto;
           right: 0;
           border-right: none;
           border-left: 5px solid transparent;
-          border-top: 4px solid #257287;
+          border-top: 4px solid #53B5E0;
           bottom: -4px;
         }
       }
@@ -262,21 +246,23 @@ Mixins
   .message-box {
     flex: 0 1 40px;
     width: 100%;
-    background: rgba(0, 0, 0, 0.3);
+    background: #fff;
     padding: 10px;
     position: relative;
+    border-top: 1px solid #E2E2E2;
     
     & .message-input {
       background: none;
       border: none;
       outline: none!important;
       resize: none;
-      color: rgba(255, 255, 255, .7);
-      font-size: 11px;
-      height: 17px;
+      //color: rgba(255, 255, 255, 1);
+      font-size: 13px;
+      //height: 17px;
       margin: 0;
       padding-right: 20px;
       width: 90%;
+      font-family: inherit;
     }
     
     textarea:focus:-webkit-placeholder{
@@ -290,7 +276,7 @@ Mixins
       right: 10px;
       color: #fff;
       border: none;
-      background: #248A52;
+      background: #E84F6B;
       font-size: 10px;
       text-transform: uppercase;
       line-height: 1;
@@ -300,7 +286,7 @@ Mixins
       transition: background .2s ease;
       
       &:hover {
-        background: #1D7745;
+        background: #E84F6B;
       }
     }
   }
