--- a/src/components/assets/styles/chatbot.scss
+++ b/src/components/assets/styles/chatbot.scss
@@ -54,7 +54,7 @@ Mixins
     @include center;
     width: 100%;
     height: 100vh;
-    max-height: 500px;
+    max-height: 550px;
     z-index: 2;
     overflow: auto;
     //box-shadow: 0 5px 8px rgba(0, 0, 0, .6);
@@ -130,7 +130,16 @@ Mixins
       padding: 5px;
       overflow-y: auto;
     }
-  
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .messages-content::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .messages-content {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    }
     
     .message {
       clear: both;
